:star2::honeybee::mouse:Go

--- a/1.md
+++ b/1.md
@@ -1,16 +1,16 @@
-鹏程2018年第一天写给自己的一封信：
-      眨眼间2017年已过去，回顾这一年来不断问自己2017年我收获到了什么？学到了什么？悟到了什么？目标达成了多少？成长了多少？付出了多少？
-       2017一切的一切……但无论我想到了是什么方面，首先必须从内心深深地感恩我的父母老婆孩子和家人！感恩我生命中的贵人好兄弟湘涛！感恩一路相随的黄金时代所有家人兄弟姐妹们给予我的支持、成长、力挺、包容和信任；感恩所有帮助和认可黄金时代的新老客户！感恩身边的一切！
+##鹏程2018年第一天写给自己的一封信：
+*眨眼间2017年已过去，回顾这一年来不断问自己2017年我收获到了什么？学到了什么？悟到了什么？目标达成了多少？成长了多少？付出了多少？
+*2017一切的一切……但无论我想到了是什么方面，首先必须从内心深深地感恩我的父母老婆孩子和家人！感恩我生命中的贵人好兄弟湘涛！感恩一路相随的黄金时代所有家人兄弟姐妹们给予我的支持、成长、力挺、包容和信任；感恩所有帮助和认可黄金时代的新老客户！感恩身边的一切！
 回顾2017我的记忆忧新，上半年有幸参加张老师的传统文化课程，让我感悟到……人生的价值在于修心、修缮、修德、钱不是挣回来的是修来的！更让我深深体会到……我是一切的根源！感恩张老师……
-    下半年完成了自己提前一年的目标，即黄金时代名车广场开业。想想2017是很棒的一年，在工作上也收获很多，进步了很多，悟到了很多，不管是哪方面，学习着之前没接触的事情，在管理方面非常感恩王总、陈总、邓总、谢总和老婆的付出和支持！在收购工作方面也感恩陈总刘总范总两位邓总给予的鼎力对接和默默付出，在运输收购方面感恩朱总廖总无私的付出和负责任的帮助，在财务方面感恩两位美女的细心、用心和无微不至的服务，在网络平台和销售部的精英牌证方面得到了黄金时代家人们的努力付出和创新发展！这一切都是我这一年无形中最大最大的收获。再次感恩黄金时代的家人们……
+下半年完成了自己提前一年的目标，即黄金时代名车广场开业。想想2017是很棒的一年，在工作上也收获很多，进步了很多，悟到了很多，不管是哪方面，学习着之前没接触的事情，在管理方面非常感恩王总、陈总、邓总、谢总和老婆的付出和支持！在收购工作方面也感恩陈总刘总范总两位邓总给予的鼎力对接和默默付出，在运输收购方面感恩朱总廖总无私的付出和负责任的帮助，在财务方面感恩两位美女的细心、用心和无微不至的服务，在网络平台和销售部的精英牌证方面得到了黄金时代家人们的努力付出和创新发展！这一切都是我这一年无形中最大最大的收获。再次感恩黄金时代的家人们……
 2017年值得随喜自己的是坚持早安分享和运动，其实自己一直是一个很懒的人，很庆幸可以长期坚持下来！
 2017经历了很多，成长了不少，前些天感觉自己开悟了，这是一件多么棒的事情，当然更多的是自己的不足，有很多缺点和毛病错误，值得深深反思、反省自己！检讨自己、在跟爸妈家人相处中是觉得对她们缺少最多的还是陪伴，却不能时常在家，这一点觉得在2018年是需要做最大改变、习惯改变、惰性改变、每天做检讨总结！
-        最后的最后只想找个没人的地方，对着镜子，给自己鞠个躬，然后对自己说一句： 大爷，您辛苦了，2017年您真的很不容易！没有假期、没有日夜、风雨无阻、人变老了不少，但是心态、状态、能量都无与伦比！展望蓝图2018必将付出比常人十倍以上的努力帮助黄金时代所有的家人用最短时间实现大家的梦想和目标！
-      我是一切的根源，让我们2018愿在一起，心在一起，携手共进，创造美好明天！
-     新的一年祝福我生命中所有的贵人：健康平安富足喜悦……
-      感恩所有人我爱大家！
+最后的最后只想找个没人的地方，对着镜子，给自己鞠个躬，然后对自己说一句： 大爷，您辛苦了，2017年您真的很不容易！没有假期、没有日夜、风雨无阻、人变老了不少，但是心态、状态、能量都无与伦比！展望蓝图2018必将付出比常人十倍以上的努力帮助黄金时代所有的家人用最短时间实现大家的梦想和目标！
+我是一切的根源，让我们2018愿在一起，心在一起，携手共进，创造美好明天！
+新的一年祝福我生命中所有的贵人：健康平安富足喜悦……
+感恩所有人我爱大家！
                      ——鹏程于18年1月1日
-
+*
 回首2017展望2018：
 回首过去的2017年，有苦有乐有欢笑也有泪水，经历了身体的伤痛，也经历了心灵的伤痛，每一次想放弃的时候，我告诉我自己，我一定可以的，酸甜苦辣样样尝，这就是人生百味吧。肩负一个家庭的责任，一个公司的责任，我唯有坚持与坚强。每每想到公司所有的家人，想到父母孩子，再多的委屈也得咽下去，感谢这一切一切的经历，让我一点一点的成长，厉练自己，强大自己内心。感谢黄金时代所有家人的努力和付出，也感谢父母，爱人、孩子们！因为有你们，才使我更懂得责任与担当！2018年，我将会以学习做为重要目标，照顾孩子高考时期的生活，辅导两个小的，让他们成为一个品学兼优的好学生！自己同时把健康和美丽重视起来，做一个内外兼修的女子！2018我们一起加油
 
