:star2::honeybee::mouse:Go

--- a/1.md
+++ b/1.md
@@ -1,112 +1,118 @@
+# 2108携手前行，不忘初心
+
 ### 鹏程2018年第一天写给自己的一封信
 
-> 眨眼间2017年已过去，回顾这一年来不断问自己2017年我收获到了什么？学到了什么？悟到了什么？目标达成了多少？成长了多少？付出了多少？
+&emsp;&emsp;眨眼间2017年已过去，回顾这一年来不断问自己2017年我收获到了什么？学到了什么？悟到了什么？目标达成了多少？成长了多少？付出了多少？
 
-> 2017一切的一切……但无论我想到了是什么方面，首先必须从内心深深地感恩我的父母老婆孩子和家人！感恩我生命中的贵人好兄弟湘涛！感恩一路相随的黄金时代所有家人兄弟姐妹们给予我的支持、成长、力挺、包容和信任；感恩所有帮助和认可黄金时代的新老客户！感恩身边的一切！
+&emsp;&emsp;2017一切的一切……但无论我想到了是什么方面，首先必须从内心深深地感恩我的父母老婆孩子和家人！感恩我生命中的贵人好兄弟湘涛！感恩一路相随的黄金时代所有家人兄弟姐妹们给予我的支持、成长、力挺、包容和信任；感恩所有帮助和认可黄金时代的新老客户！感恩身边的一切！
 回顾2017我的记忆忧新，上半年有幸参加张老师的传统文化课程，让我感悟到……人生的价值在于修心、修缮、修德、钱不是挣回来的是修来的！更让我深深体会到……我是一切的根源！感恩张老师……
 
-> 下半年完成了自己提前一年的目标，即黄金时代名车广场开业。想想2017是很棒的一年，在工作上也收获很多，进步了很多，悟到了很多，不管是哪方面，学习着之前没接触的事情，在管理方面非常感恩王总、陈总、邓总、谢总和老婆的付出和支持！在收购工作方面也感恩陈总刘总范总两位邓总给予的鼎力对接和默默付出，在运输收购方面感恩朱总廖总无私的付出和负责任的帮助，在财务方面感恩两位美女的细心、用心和无微不至的服务，在网络平台和销售部的精英牌证方面得到了黄金时代家人们的努力付出和创新发展！这一切都是我这一年无形中最大最大的收获。再次感恩黄金时代的家人们……
+&emsp;&emsp;下半年完成了自己提前一年的目标，即黄金时代名车广场开业。想想2017是很棒的一年，在工作上也收获很多，进步了很多，悟到了很多，不管是哪方面，学习着之前没接触的事情，在管理方面非常感恩王总、陈总、邓总、谢总和老婆的付出和支持！在收购工作方面也感恩陈总刘总范总两位邓总给予的鼎力对接和默默付出，在运输收购方面感恩朱总廖总无私的付出和负责任的帮助，在财务方面感恩两位美女的细心、用心和无微不至的服务，在网络平台和销售部的精英牌证方面得到了黄金时代家人们的努力付出和创新发展！这一切都是我这一年无形中最大最大的收获。再次感恩黄金时代的家人们……
 
-> 2017年值得随喜自己的是坚持早安分享和运动，其实自己一直是一个很懒的人，很庆幸可以长期坚持下来！
+&emsp;&emsp;2017年值得随喜自己的是坚持早安分享和运动，其实自己一直是一个很懒的人，很庆幸可以长期坚持下来！
 
-> 2017经历了很多，成长了不少，前些天感觉自己开悟了，这是一件多么棒的事情，当然更多的是自己的不足，有很多缺点和毛病错误，值得深深反思、反省自己！检讨自己、在跟爸妈家人相处中是觉得对她们缺少最多的还是陪伴，却不能时常在家，这一点觉得在2018年是需要做最大改变、习惯改变、惰性改变、每天做检讨总结！
+&emsp;&emsp;2017经历了很多，成长了不少，前些天感觉自己开悟了，这是一件多么棒的事情，当然更多的是自己的不足，有很多缺点和毛病错误，值得深深反思、反省自己！检讨自己、在跟爸妈家人相处中是觉得对她们缺少最多的还是陪伴，却不能时常在家，这一点觉得在2018年是需要做最大改变、习惯改变、惰性改变、每天做检讨总结！
 
-> 最后的最后只想找个没人的地方，对着镜子，给自己鞠个躬，然后对自己说一句： 大爷，您辛苦了，2017年您真的很不容易！没有假期、没有日夜、风雨无阻、人变老了不少，但是心态、状态、能量都无与伦比！展望蓝图2018必将付出比常人十倍以上的努力帮助黄金时代所有的家人用最短时间实现大家的梦想和目标！
+&emsp;&emsp;最后的最后只想找个没人的地方，对着镜子，给自己鞠个躬，然后对自己说一句： 大爷，您辛苦了，2017年您真的很不容易！没有假期、没有日夜、风雨无阻、人变老了不少，但是心态、状态、能量都无与伦比！展望蓝图2018必将付出比常人十倍以上的努力帮助黄金时代所有的家人用最短时间实现大家的梦想和目标！
 
-> 我是一切的根源，让我们2018愿在一起，心在一起，携手共进，创造美好明天！
+&emsp;&emsp;我是一切的根源，让我们2018愿在一起，心在一起，携手共进，创造美好明天！
 
-> 新的一年祝福我生命中所有的贵人：健康平安富足喜悦……
+&emsp;&emsp;新的一年祝福我生命中所有的贵人：健康平安富足喜悦……
 
-> 感恩所有人我爱大家！
+&emsp;&emsp;感恩所有人我爱大家！
 
     ——鹏程于18年1月1日
 
 
 ### 回首2017展望2018：
-> 回首过去的2017年，有苦有乐有欢笑也有泪水，经历了身体的伤痛，也经历了心灵的伤痛，每一次想放弃的时候，我告诉我自己，我一定可以的，酸甜苦辣样样尝，这就是人生百味吧。肩负一个家庭的责任，一个公司的责任，我唯有坚持与坚强。每每想到公司所有的家人，想到父母孩子，再多的委屈也得咽下去，感谢这一切一切的经历，让我一点一点的成长，厉练自己，强大自己内心。感谢黄金时代所有家人的努力和付出，也感谢父母，爱人、孩子们！因为有你们，才使我更懂得责任与担当！2018年，我将会以学习做为重要目标，照顾孩子高考时期的生活，辅导两个小的，让他们成为一个品学兼优的好学生！自己同时把健康和美丽重视起来，做一个内外兼修的女子！2018我们一起加油
+&emsp;&emsp;回首过去的2017年，有苦有乐有欢笑也有泪水，经历了身体的伤痛，也经历了心灵的伤痛，每一次想放弃的时候，我告诉我自己，我一定可以的，酸甜苦辣样样尝，这就是人生百味吧。肩负一个家庭的责任，一个公司的责任，我唯有坚持与坚强。每每想到公司所有的家人，想到父母孩子，再多的委屈也得咽下去，感谢这一切一切的经历，让我一点一点的成长，厉练自己，强大自己内心。感谢黄金时代所有家人的努力和付出，也感谢父母，爱人、孩子们！因为有你们，才使我更懂得责任与担当！2018年，我将会以学习做为重要目标，照顾孩子高考时期的生活，辅导两个小的，让他们成为一个品学兼优的好学生！自己同时把健康和美丽重视起来，做一个内外兼修的女子！2018我们一起加油
 
-> 2018写给自己的一封信：
-> 2017转眼即过……但无论我想到了是什么方面，首先必须从内心深深的感谢我的家人父亲 哥哥 姐姐们的照顾、包容。感恩朱鹏程 邓开元 邓旭 带我进入黄金时代这个平台。谢谢他们提供了这么优秀的平台让我学习成长 .感恩一路相随的黄金时代所有家人兄弟姐妹们给予我的支持、成长、力挺、包容和信任；说一声你们辛苦了 感谢所有信任我的客户与帮助我的朋友 同行。
-> 2017年初个人制定的目标 、在一年的努力中完成了百分之八十. 同样很多没有实现、需要更加努力。 在各位领导的感染下使自己接触到了学习的重要性、人生的意义 。每次给自己制定的小目标完成后都有成就感 .成长比赚钱重要。
-> 在2017年所有客户与朋友同行之中很多人教我很多知识 、使我在成长 与发现自己的不足，需要去提升与学习的地方。
-> 2017年没有完成的目前与理想 在2018年中一定去落实、自己的缺点就是对自己不够绽放 不够激情与认真 容易退缩、行动力不足。这些在2018都需要去改变.  
-> 我一直坚信着想要比别人优秀就一定比别人付出的更多 .想要收获更多就一定要比别人更努力 .没有捷径 不进步就淘汰 。成长中布满 喜悦与心酸。回顾2017感谢自己小伙子你成长了 都在朝着自己向往的生活中进步。加油 
-> 2018年希望自己可以完成自己所有的目标 。在黄金时代名车汇跟所有家人一起成长.赚钱。希望每位家人都可以达到自己理想与目标。
-> 2018祝愿所有的人 ：身体健康 开心 幸福 感恩身边所有人
+&emsp;&emsp;2018写给自己的一封信：
+&emsp;&emsp;2017转眼即过……但无论我想到了是什么方面，首先必须从内心深深的感谢我的家人父亲 哥哥 姐姐们的照顾、包容。感恩朱鹏程 邓开元 邓旭 带我进入黄金时代这个平台。谢谢他们提供了这么优秀的平台让我学习成长 .感恩一路相随的黄金时代所有家人兄弟姐妹们给予我的支持、成长、力挺、包容和信任；说一声你们辛苦了 感谢所有信任我的客户与帮助我的朋友 同行。
+&emsp;&emsp;2017年初个人制定的目标 、在一年的努力中完成了百分之八十. 同样很多没有实现、需要更加努力。 在各位领导的感染下使自己接触到了学习的重要性、人生的意义 。每次给自己制定的小目标完成后都有成就感 .成长比赚钱重要。
+&emsp;&emsp;在2017年所有客户与朋友同行之中很多人教我很多知识 、使我在成长 与发现自己的不足，需要去提升与学习的地方。
+&emsp;&emsp;2017年没有完成的目前与理想 在2018年中一定去落实、自己的缺点就是对自己不够绽放 不够激情与认真 容易退缩、行动力不足。这些在2018都需要去改变.  
+&emsp;&emsp;我一直坚信着想要比别人优秀就一定比别人付出的更多 .想要收获更多就一定要比别人更努力 .没有捷径 不进步就淘汰 。成长中布满 喜悦与心酸。回顾2017感谢自己小伙子你成长了 都在朝着自己向往的生活中进步。加油 
+&emsp;&emsp;2018年希望自己可以完成自己所有的目标 。在黄金时代名车汇跟所有家人一起成长.赚钱。希望每位家人都可以达到自己理想与目标。
+&emsp;&emsp;2018祝愿所有的人 ：身体健康 开心 幸福 感恩身边所有人
       
     ——王祥力18年1月2日
 
 ### 回首2017展望2018：
+&emsp;&emsp;回首过去的2017年，有苦有乐有欢笑也有泪水，经历了身体的伤痛，也经历了心灵的伤痛，每一次想放弃的时候，我告诉我自己，我一定可以的，酸甜苦辣样样尝，这就是人生百味吧。肩负一个家庭的责任，一个公司的责任，我唯有坚持与坚强。每每想到公司所有的家人，想到父母孩子，再多的委屈也得咽下去，感谢这一切一切的经历，让我一点一点的成长，厉练自己，强大自己内心。感谢黄金时代所有家人的努力和付出，也感谢父母，爱人、孩子们！因为有你们，才使我更懂得责任与担当！2018年，我将会以学习做为重要目标，照顾孩子高考时期的生活，辅导两个小的，让他们成为一个品学兼优的好学生！自己同时把健康和美丽重视起来，做一个内外兼修的女子！2018我们一起加油！
+    ——邓旭
 
-> 不经意间，2017年在忙碌而又充实的工作中渐行渐远。回首这一年，收获多多，感慨多多。
+### 回首2017展望2018：
 
-> 首先感谢我的父母是他们给予我生命，感谢我的爱人对家庭的默默付出，感恩朱懂，邓总在我人生中最困难的时期拉我一把，给予我工作在此说一声谢谢在进入黄金时代短短的几个月的工作中感受到了朱懂，邓总的关怀和鼓励，以及我的两位师傳朱守林，陈思霖对二手车知识的传授，同时获得了同事的理解，帮助与配合谢谢你们，得到朋友的无私帮助，沉浸在公司浓浓的关爱中。  
+&emsp;&emsp;不经意间，2017年在忙碌而又充实的工作中渐行渐远。回首这一年，收获多多，感慨多多。
 
-> 上半年在朱总的推荐下有幸听了张老师的传统文化讲座，使我心态各方面有了很大的变化， 一切的根源来自于本身，接下来在2018，必须放下以往的一切，空杯的心态多向同事学习专业知识，能够为公司创造利益的同时也能增加自己的收入！
+&emsp;&emsp;首先感谢我的父母是他们给予我生命，感谢我的爱人对家庭的默默付出，感恩朱懂，邓总在我人生中最困难的时期拉我一把，给予我工作在此说一声谢谢在进入黄金时代短短的几个月的工作中感受到了朱懂，邓总的关怀和鼓励，以及我的两位师傳朱守林，陈思霖对二手车知识的传授，同时获得了同事的理解，帮助与配合谢谢你们，得到朋友的无私帮助，沉浸在公司浓浓的关爱中。  
+
+&emsp;&emsp;上半年在朱总的推荐下有幸听了张老师的传统文化讲座，使我心态各方面有了很大的变化， 一切的根源来自于本身，接下来在2018，必须放下以往的一切，空杯的心态多向同事学习专业知识，能够为公司创造利益的同时也能增加自己的收入！
 
     2018注定是个崭新的一年 加油吧廖坤华   
 
 ### 回首2017、展望2018：
 
-> 转眼间2017一晃就过去了、想想2017自己定的目标、自己做了什么、学到了什么、赚的了什么、发现2017的自己真的不争气不努力、浪费了太多的时间、记得我是从一条二手车跟新车交易量占比行情小视频、萌发了我要去做二手车的决定、在我深思考虑了这行业、感觉这行业发展前景很客观很有挑战力、从水果行业转入二手车行业的时候、我跟我老婆聊了我要去做二手车、我说我去做二手车了可能前几个月或一年都没什么钱给你花了、她说没事、你去想去做就去做认真做、听到她这么支持我、瞬间眼泪就出来了、心里默默在想这一辈子一定不能辜负她母女俩、就算自己吃馒头也不能苦了她们母女俩、首先我要感谢我老婆、在精神上这么支持我、这么了解我、我感觉我很幸运我有这样一位女人、记得我来黄金时代应聘的时候、还在门口走了几个来回才鼓起勇气打电话进来的、记得应聘时朱总最后跟我说了句话说、我们这里刚开始试用期底薪只有一千块钱、你考虑一下、考虑好了来上班、回家路上心里特别开心高兴、感觉已经打开了走向成功大门了、在我来到黄金时代一段时间后发现我们公司是这么牛、感觉自己很幸运来到了这么好的一个平台、在公司里给我感染最多就是朱总跟王总、他俩是我的榜样、我自己暗暗在想我什么时候做到跟他们一样🐂、那时我就给了自己一个3年的计划目标、2017年已经过去了、在2017的一年里、自己真的不够努力、本来可以做的更好、学的更多的知识的、自己的惰性跟不坚持离自己定下的目标很远、自己对不起自己家人的支持、对不起公司给予了这么好一个平台没去发挥没去努力、2017已经过去了在2018里我要有个全新的自己、自己一定要改掉自己不好的习惯、2018一定要我一定要提高自己执行力、主动、坚持、勤快、坚持认真做好每一天工作、时刻把公司事当作自己的事干、一心一意去做好每一件事、我深深的相信在朱总的带领下我们公司将来绝对是全国二手车界的标杆、我一要努力跟随着我们朱总一起完成我们大家的梦想、                      2018话不多说让行动跟结果来证明自己
+&emsp;&emsp;转眼间2017一晃就过去了、想想2017自己定的目标、自己做了什么、学到了什么、赚的了什么、发现2017的自己真的不争气不努力、浪费了太多的时间、记得我是从一条二手车跟新车交易量占比行情小视频、萌发了我要去做二手车的决定、在我深思考虑了这行业、感觉这行业发展前景很客观很有挑战力、从水果行业转入二手车行业的时候、我跟我老婆聊了我要去做二手车、我说我去做二手车了可能前几个月或一年都没什么钱给你花了、她说没事、你去想去做就去做认真做、听到她这么支持我、瞬间眼泪就出来了、心里默默在想这一辈子一定不能辜负她母女俩、就算自己吃馒头也不能苦了她们母女俩、首先我要感谢我老婆、在精神上这么支持我、这么了解我、我感觉我很幸运我有这样一位女人、记得我来黄金时代应聘的时候、还在门口走了几个来回才鼓起勇气打电话进来的、记得应聘时朱总最后跟我说了句话说、我们这里刚开始试用期底薪只有一千块钱、你考虑一下、考虑好了来上班、回家路上心里特别开心高兴、感觉已经打开了走向成功大门了、在我来到黄金时代一段时间后发现我们公司是这么牛、感觉自己很幸运来到了这么好的一个平台、在公司里给我感染最多就是朱总跟王总、他俩是我的榜样、我自己暗暗在想我什么时候做到跟他们一样🐂、那时我就给了自己一个3年的计划目标、2017年已经过去了、在2017的一年里、自己真的不够努力、本来可以做的更好、学的更多的知识的、自己的惰性跟不坚持离自己定下的目标很远、自己对不起自己家人的支持、对不起公司给予了这么好一个平台没去发挥没去努力、2017已经过去了在2018里我要有个全新的自己、自己一定要改掉自己不好的习惯、2018一定要我一定要提高自己执行力、主动、坚持、勤快、坚持认真做好每一天工作、时刻把公司事当作自己的事干、一心一意去做好每一件事、我深深的相信在朱总的带领下我们公司将来绝对是全国二手车界的标杆、我一要努力跟随着我们朱总一起完成我们大家的梦想、                      2018话不多说让行动跟结果来证明自己
     余前山2018-01-03  
 
 ### 回首2017，展望2018：
 
-> 2017对我来说也许是人生当中最痛苦，而又残酷的一年。值得庆幸的是我找到了自己，非常感谢赣州所有的小伙伴们， 在我最痛苦的时候感到了温暖。特别是王总，记得他在车里热的全身是汗和我谈心，他谈话我流眼泪了。他的付出和包容，委屈，有目共睹。欧阳丹是个非常有智慧的人，她的一些生活习惯和日常影响了我。我曾发誓我也要向她一样向她学习。朱升江，是个有抱负有梦想的人，非常的单纯。钟定荣其实是个非常渴望成功的，一直非常努力。老余是个非常勤快的人，属于埋头苦干型，把公司的每一件事当成是自己的事。感谢黄金时代的每一个人。感谢朱总和邓总对我的包容，一直鼓励我。感谢黄金时代的谢总和所有所有同事对我的帮助和包容，真诚的谢谢你们。2018我会更努力，我相信我会越来越好。
+&emsp;&emsp;2017对我来说也许是人生当中最痛苦，而又残酷的一年。值得庆幸的是我找到了自己，非常感谢赣州所有的小伙伴们， 在我最痛苦的时候感到了温暖。特别是王总，记得他在车里热的全身是汗和我谈心，他谈话我流眼泪了。他的付出和包容，委屈，有目共睹。欧阳丹是个非常有智慧的人，她的一些生活习惯和日常影响了我。我曾发誓我也要向她一样向她学习。朱升江，是个有抱负有梦想的人，非常的单纯。钟定荣其实是个非常渴望成功的，一直非常努力。老余是个非常勤快的人，属于埋头苦干型，把公司的每一件事当成是自己的事。感谢黄金时代的每一个人。感谢朱总和邓总对我的包容，一直鼓励我。感谢黄金时代的谢总和所有所有同事对我的帮助和包容，真诚的谢谢你们。2018我会更努力，我相信我会越来越好。
 
     2018年1月3日朱凌仪
 
 ### 回首2017 展望2018：
 
-> 再见，2017。你好！2018。时光飞逝，日月如梭，转眼2018就已过3天啦 真的是时间就在偷偷溜走 要珍惜时间 珍惜眼前。
+&emsp;&emsp;再见，2017。你好！2018。时光飞逝，日月如梭，转眼2018就已过3天啦 真的是时间就在偷偷溜走 要珍惜时间 珍惜眼前。
 
-> 17年是我步入社会的第一年，这年注定将不平凡。非常庆幸能进入黄金时代这个大舞台 非常感谢黄金时代这个伟大的平台，感恩朱总邓总 感谢欧阳丹平时的帮忙 感谢老余常借电动车给我用 感谢王总的大爱 感谢邓诗云常常帮我…… 感谢黄金时代名车所有的家人们。
+&emsp;&emsp;17年是我步入社会的第一年，这年注定将不平凡。非常庆幸能进入黄金时代这个大舞台 非常感谢黄金时代这个伟大的平台，感恩朱总邓总 感谢欧阳丹平时的帮忙 感谢老余常借电动车给我用 感谢王总的大爱 感谢邓诗云常常帮我…… 感谢黄金时代名车所有的家人们。
 
-> 这一年 喜怒哀乐 酸甜苦辣 经历了什么，收获了许多 也让我不断的成长  当然也免不了遗憾，17年的目标没能全部实现，2018年接着完成。
+&emsp;&emsp;这一年 喜怒哀乐 酸甜苦辣 经历了什么，收获了许多 也让我不断的成长  当然也免不了遗憾，17年的目标没能全部实现，2018年接着完成。
 
-> 2018年 要更健康 存款要上涨，要快乐，要不断养成好习惯(摈弃不好的习惯)，要过得充实，过得有意义！新的一年，新开始，新希望，新征程，努力在路上，2018年祝愿每个家人的梦想都能实现 祝黄金时代名车的明天更加美好辉煌 在一起 创精彩！加油(^ω^)
+&emsp;&emsp;2018年 要更健康 存款要上涨，要快乐，要不断养成好习惯(摈弃不好的习惯)，要过得充实，过得有意义！新的一年，新开始，新希望，新征程，努力在路上，2018年祝愿每个家人的梦想都能实现 祝黄金时代名车的明天更加美好辉煌 在一起 创精彩！加油(^ω^)
 
     2018.01.03 朱升江     
 
-> 穿越回到2017年初始，我感觉我是汪洋中的一艘小破船，没有目标，没有航向，每天都是随波逐流，浪把我推到哪里我就在哪里，前途未知，直到遇到朱总把我带上了黄金时代这艘诺亚方舟，从此我有了不一样的人生，有了目标。有了方向，不再随波逐流，在这艘大船上，朱总是船长指引着正确的方向，邓旭邓总是坚强的后盾，保证着“燃料”充足，王总，谢总，邓总是舵手，用强壮的双手把握着方向，保证大船不偏航，每位同事在自己的岗位上各司其职，全心全力，为了共同和自己的目标方向努力着，我有幸进入这个大家庭，并且找到属于自己的位置，和所有家人在前进中共患难，在向前进的路上尽上一份微薄之力。在这一年里，见证了朱总与邓总的大爱与正能量，每次听完朱总讲话，都感觉全身充满了力量，前途充满了希望，见证了充满智慧，快乐，健康，大爱和付出的每一个位家人以及团结的力量，同时对比出我的不足，不够绽放，不够勤快，不够专业，不够学习力，包袱太多，放不下过去。2017年感谢父母弟弟妹妹对我的支持与信任，感谢朱总和邓总夫妇带领着我成长，感谢各位家人陪伴我成长，2018，在朱总的带领下，改变自己的不足之处，和各位家人共同学习，共同努力，共同进步，为公司的大目标和自己的小目标而奋斗。
+&emsp;&emsp;穿越回到2017年初始，我感觉我是汪洋中的一艘小破船，没有目标，没有航向，每天都是随波逐流，浪把我推到哪里我就在哪里，前途未知，直到遇到朱总把我带上了黄金时代这艘诺亚方舟，从此我有了不一样的人生，有了目标。有了方向，不再随波逐流，在这艘大船上，朱总是船长指引着正确的方向，邓旭邓总是坚强的后盾，保证着“燃料”充足，王总，谢总，邓总是舵手，用强壮的双手把握着方向，保证大船不偏航，每位同事在自己的岗位上各司其职，全心全力，为了共同和自己的目标方向努力着，我有幸进入这个大家庭，并且找到属于自己的位置，和所有家人在前进中共患难，在向前进的路上尽上一份微薄之力。在这一年里，见证了朱总与邓总的大爱与正能量，每次听完朱总讲话，都感觉全身充满了力量，前途充满了希望，见证了充满智慧，快乐，健康，大爱和付出的每一个位家人以及团结的力量，同时对比出我的不足，不够绽放，不够勤快，不够专业，不够学习力，包袱太多，放不下过去。2017年感谢父母弟弟妹妹对我的支持与信任，感谢朱总和邓总夫妇带领着我成长，感谢各位家人陪伴我成长，2018，在朱总的带领下，改变自己的不足之处，和各位家人共同学习，共同努力，共同进步，为公司的大目标和自己的小目标而奋斗。
 
     钟定荣2018-01-03
 
 ### 回眸17展望18有恒心必成功－恒成：
 
-> 回眸2017，我首先要感谢大家对我工作的支持帮助和鼓励及鞭策！其实我最对不起的就是我的两个孩子和家人，我没有做好一个做父亲的责任，对孩子太少的关心和呵护，所有的事情都是我老婆在帮我做，在这里我要谢谢我的老婆你辛苦了！还有我的父母兄弟姐妹们和身边的朋友默默地帮我，我永记心中。我要谢谢董事长夫妇能提供那么好的黄金时代平台为大家施展才华！一年以来，我在工作中有失误也有成就。公司每个人员在我心里都有一把秤，性格脾气不一但,心️在一起，彼此容融，取长补短凸凹有致，在2017年公司取得了重大突破、腾飞！从［黄金时代二手车］发展到今天【黄金时代名车广场】，历经风雨洗礼，其中都离不开每一位〖黄金时代人〗的辛勤付出和全力推进，一路走来都是稳步发展！
+&emsp;&emsp;回眸2017，我首先要感谢大家对我工作的支持帮助和鼓励及鞭策！其实我最对不起的就是我的两个孩子和家人，我没有做好一个做父亲的责任，对孩子太少的关心和呵护，所有的事情都是我老婆在帮我做，在这里我要谢谢我的老婆你辛苦了！还有我的父母兄弟姐妹们和身边的朋友默默地帮我，我永记心中。我要谢谢董事长夫妇能提供那么好的黄金时代平台为大家施展才华！一年以来，我在工作中有失误也有成就。公司每个人员在我心里都有一把秤，性格脾气不一但,心️在一起，彼此容融，取长补短凸凹有致，在2017年公司取得了重大突破、腾飞！从［黄金时代二手车］发展到今天【黄金时代名车广场】，历经风雨洗礼，其中都离不开每一位〖黄金时代人〗的辛勤付出和全力推进，一路走来都是稳步发展！
 
-> 每个人都会有梦想，我很久以前就有梦想在城里买房，买车，而且要赚很多很多的钱，你们可能不知道我在6年前我就定了一个五年计划，必须在老家一定要建新房子，因为那是生命起源的地方，不管在外面混的怎么样老家还是要有一个落脚之地，一个童年回忆空间，所于自己的房子。就这么点事我早以实现！最大的梦想是在2017年在城里面买房子也已实现。在这里我要感谢黄金时代公司的老板，领导，干部，员工（不一一点名)及家人亲戚朋友谢谢你们，帮我实现梦想！
+&emsp;&emsp;每个人都会有梦想，我很久以前就有梦想在城里买房，买车，而且要赚很多很多的钱，你们可能不知道我在6年前我就定了一个五年计划，必须在老家一定要建新房子，因为那是生命起源的地方，不管在外面混的怎么样老家还是要有一个落脚之地，一个童年回忆空间，所于自己的房子。就这么点事我早以实现！最大的梦想是在2017年在城里面买房子也已实现。在这里我要感谢黄金时代公司的老板，领导，干部，员工（不一一点名)及家人亲戚朋友谢谢你们，帮我实现梦想！
 
-> 2017我也有很多不足，思想不开悟，自信心不够强大，时常会怯场，口才不好不善言辞的时候。导致失流很多客户。从而我常常想要如何如何地，改变自我！改变是必须的，改变我的心态，战胜我的恐惧，抛却我的紧张，锻炼我的胆量，树立我的自信，在不断尝试中提升我的表达能力，做好这些我相信自己的业务能力一定会涨十倍百倍或者千倍的收益，请大家多多帮助、多多＂找茬子＂。
+&emsp;&emsp;2017我也有很多不足，思想不开悟，自信心不够强大，时常会怯场，口才不好不善言辞的时候。导致失流很多客户。从而我常常想要如何如何地，改变自我！改变是必须的，改变我的心态，战胜我的恐惧，抛却我的紧张，锻炼我的胆量，树立我的自信，在不断尝试中提升我的表达能力，做好这些我相信自己的业务能力一定会涨十倍百倍或者千倍的收益，请大家多多帮助、多多＂找茬子＂。
 
-> 2018，是一个斩新的开始！2018，是一个新的飞跃！2018是我人生的黄金时代！！我要把公司当成家，全意全意为你做好自己，多做事多动脑筋多创佳绩。在老板的英明决策和正确领导下，黄金时代将是一个新的快速飞越！2018年定个小目标先赚2018万，愿人人住新房，开豪车，穿高档衣服，出入高档场所，享受社会高端服务！！
+&emsp;&emsp;2018，是一个斩新的开始！2018，是一个新的飞跃！2018是我人生的黄金时代！！我要把公司当成家，全意全意为你做好自己，多做事多动脑筋多创佳绩。在老板的英明决策和正确领导下，黄金时代将是一个新的快速飞越！2018年定个小目标先赚2018万，愿人人住新房，开豪车，穿高档衣服，出入高档场所，享受社会高端服务！！
 
-> 2018祝福所有人健康、幸福、快乐！
+&emsp;&emsp;2018祝福所有人健康、幸福、快乐！
 
-> 只要有恒心，必然要成功!加油。             
+&emsp;&emsp;只要有恒心，必然要成功!加油。             
 
     恒成  于20180102 郴州      
 
 ### 回首2017，展望2018
 
-> 2017我的本命年，也是特别的一年，结婚、走进二手车行业、宝宝的出生，开始了人生的另一段路程。
+&emsp;&emsp;2017我的本命年，也是特别的一年，结婚、走进二手车行业、宝宝的出生，开始了人生的另一段路程。
 
-> 记得第一天来公司，我的师傅邓开元邓总问我：你刚结婚生活有没有压力？我说：没有。告诉我刚来没什么收入，选择做就要坚持下去，如果是来打酱油就不要来，从我说要来学徒的那一刻，我就告诉自己不管遇到任何困难都不能放弃。然后邓总就带着我，教我看车，告诉我怎么做。王总也经常教我一些思路，因为自己不够努力学习，没有什么进步。本有着一颗对汽车热爱的心，走进二手车后，就越来越爱这个行业，发现自己的选择没有错，知道了人生的方向。
+&emsp;&emsp;记得第一天来公司，我的师傅邓开元邓总问我：你刚结婚生活有没有压力？我说：没有。告诉我刚来没什么收入，选择做就要坚持下去，如果是来打酱油就不要来，从我说要来学徒的那一刻，我就告诉自己不管遇到任何困难都不能放弃。然后邓总就带着我，教我看车，告诉我怎么做。王总也经常教我一些思路，因为自己不够努力学习，没有什么进步。本有着一颗对汽车热爱的心，走进二手车后，就越来越爱这个行业，发现自己的选择没有错，知道了人生的方向。
 
-> 首先要感恩老婆，一直支持我、鼓励我，知道我收入少，省吃俭用着，带着宝宝也不说苦不说累，默默的付出，老婆你辛苦了。感恩父母家人的关心，感恩朱董夫妇给我平台，感恩师傅邓总、王总传授知识、技术和经验，感恩全部家人的陪伴与帮助，让我成长。
+&emsp;&emsp;首先要感恩老婆，一直支持我、鼓励我，知道我收入少，省吃俭用着，带着宝宝也不说苦不说累，默默的付出，老婆你辛苦了。感恩父母家人的关心，感恩朱董夫妇给我平台，感恩师傅邓总、王总传授知识、技术和经验，感恩全部家人的陪伴与帮助，让我成长。
 
-> 2018要求自己要不断地学习，改变现状，重新开始，变得更有价值，走向黄金时代。
+&emsp;&emsp;2018要求自己要不断地学习，改变现状，重新开始，变得更有价值，走向黄金时代。
 
     ———邓诗云 
 
 ### 回首2017，展望2018：
 
-> 2017对我来说是特殊的一年，加入黄金时代这个大家庭是离开校园的第一份工作，我是幸运的，对于初入职场的我来说在这里遇到一群很有爱的家人，给了我很多帮助、包容。我们的boss朱董是一个超自律的人，他的朋友圈每天都是超级正能量的东西，不管对生活还是工作都做到了持之以恒；我们的美女财务总监邓总给我感触很大，一个女人兼顾工作和家庭，还一直不断的培养兴趣爱好陶冶自己的情操。对待工作她兢兢业业，给了我很多的指导和帮助；对家庭她愿意陪着孩子一起成长，隐忍而坚强；这都是我作为一个女性应该学习的榜样；副董事长邓总每天都是一张笑脸，温文儒雅，非常善良、包容；王总执行力非常强，做事干练；老余总是默默无闻的付出，脚踏实地；钟定荣很勤奋；松华脾气很好，做事情有条理但是话不多；升江的记忆力非常好，对待工作很认真；刘亥辉就是刘老五，95后的小伙子有超出年龄的阅历和能力；邓诗云也是活宝，但是对待工作不含糊；朱凌仪是个善良感性的妹子，非常努力付出；廖总，朱总都对我这个姑娘非常的包容，也把他们的时间献给高速了；小许很认真对待每一件事情，我们一起对接工作一起玩笑；两个表哥也是非常努力的去学习，去挑战自己；还有很多我接触不算多的同事，每一个人都有我值得去学习的地方……我是多么的幸运，遇到一群有爱的人。三人行必有我师焉，在黄金时代我遇到了这么多老师，这一年你们教会了我对待工作要有态度，对待生活要有激情，对待周围的人要有爱心。
+&emsp;&emsp;2017对我来说是特殊的一年，加入黄金时代这个大家庭是离开校园的第一份工作，我是幸运的，对于初入职场的我来说在这里遇到一群很有爱的家人，给了我很多帮助、包容。我们的boss朱董是一个超自律的人，他的朋友圈每天都是超级正能量的东西，不管对生活还是工作都做到了持之以恒；我们的美女财务总监邓总给我感触很大，一个女人兼顾工作和家庭，还一直不断的培养兴趣爱好陶冶自己的情操。对待工作她兢兢业业，给了我很多的指导和帮助；对家庭她愿意陪着孩子一起成长，隐忍而坚强；这都是我作为一个女性应该学习的榜样；副董事长邓总每天都是一张笑脸，温文儒雅，非常善良、包容；王总执行力非常强，做事干练；老余总是默默无闻的付出，脚踏实地；钟定荣很勤奋；松华脾气很好，做事情有条理但是话不多；升江的记忆力非常好，对待工作很认真；刘亥辉就是刘老五，95后的小伙子有超出年龄的阅历和能力；邓诗云也是活宝，但是对待工作不含糊；朱凌仪是个善良感性的妹子，非常努力付出；廖总，朱总都对我这个姑娘非常的包容，也把他们的时间献给高速了；小许很认真对待每一件事情，我们一起对接工作一起玩笑；两个表哥也是非常努力的去学习，去挑战自己；还有很多我接触不算多的同事，每一个人都有我值得去学习的地方……我是多么的幸运，遇到一群有爱的人。三人行必有我师焉，在黄金时代我遇到了这么多老师，这一年你们教会了我对待工作要有态度，对待生活要有激情，对待周围的人要有爱心。
 
-> 2017已经翻篇了，感恩遇到黄金时代的家人们。对于得到了的我感到骄傲，证明自己努力过；对于失去的我不难过，因为你教会了我很多。得到了是福气，失去了也是正常的。
+&emsp;&emsp;2017已经翻篇了，感恩遇到黄金时代的家人们。对于得到了的我感到骄傲，证明自己努力过；对于失去的我不难过，因为你教会了我很多。得到了是福气，失去了也是正常的。
 
-> 2018我已经为自己定下了目标，希望可以更加努力的去实现自己的梦想，变得优秀一点。也希望所有的家人们都能够不忘初心，朝着自己所向往的不断努力，始终保持一个善良感恩的心，成长比得到更重要。
+&emsp;&emsp;2018我已经为自己定下了目标，希望可以更加努力的去实现自己的梦想，变得优秀一点。也希望所有的家人们都能够不忘初心，朝着自己所向往的不断努力，始终保持一个善良感恩的心，成长比得到更重要。
 
     欧阳丹2018-01-02
