--- a/1.md
+++ b/1.md
@@ -21,7 +21,7 @@
 
 &emsp;&emsp;感恩所有人我爱大家！
 
-    `—— 鹏程于 18年1月1日`
+    —— 鹏程于 18年1月1日
 
 
 ### 回首2017展望2018：
@@ -36,12 +36,12 @@
 &emsp;&emsp;2018年希望自己可以完成自己所有的目标 。在黄金时代名车汇跟所有家人一起成长.赚钱。希望每位家人都可以达到自己理想与目标。
 &emsp;&emsp;2018祝愿所有的人 ：身体健康 开心 幸福 感恩身边所有人
       
-    `——王祥力 18年1月2日`
+    ——王祥力 18年1月2日
 
 ### 回首2017展望2018：
 &emsp;&emsp;回首过去的2017年，有苦有乐有欢笑也有泪水，经历了身体的伤痛，也经历了心灵的伤痛，每一次想放弃的时候，我告诉我自己，我一定可以的，酸甜苦辣样样尝，这就是人生百味吧。肩负一个家庭的责任，一个公司的责任，我唯有坚持与坚强。每每想到公司所有的家人，想到父母孩子，再多的委屈也得咽下去，感谢这一切一切的经历，让我一点一点的成长，厉练自己，强大自己内心。感谢黄金时代所有家人的努力和付出，也感谢父母，爱人、孩子们！因为有你们，才使我更懂得责任与担当！2018年，我将会以学习做为重要目标，照顾孩子高考时期的生活，辅导两个小的，让他们成为一个品学兼优的好学生！自己同时把健康和美丽重视起来，做一个内外兼修的女子！2018我们一起加油！
 
-    `—— 邓旭`
+    —— 邓旭
 
 ### 回首2017展望2018：
 
@@ -51,19 +51,19 @@
 
 &emsp;&emsp;上半年在朱总的推荐下有幸听了张老师的传统文化讲座，使我心态各方面有了很大的变化， 一切的根源来自于本身，接下来在2018，必须放下以往的一切，空杯的心态多向同事学习专业知识，能够为公司创造利益的同时也能增加自己的收入！
 
-    `2018注定是个崭新的一年 加油吧廖坤华`   
+    2018注定是个崭新的一年 加油吧廖坤华   
 
 ### 回首2017、展望2018：
 
 &emsp;&emsp;转眼间2017一晃就过去了、想想2017自己定的目标、自己做了什么、学到了什么、赚的了什么、发现2017的自己真的不争气不努力、浪费了太多的时间、记得我是从一条二手车跟新车交易量占比行情小视频、萌发了我要去做二手车的决定、在我深思考虑了这行业、感觉这行业发展前景很客观很有挑战力、从水果行业转入二手车行业的时候、我跟我老婆聊了我要去做二手车、我说我去做二手车了可能前几个月或一年都没什么钱给你花了、她说没事、你去想去做就去做认真做、听到她这么支持我、瞬间眼泪就出来了、心里默默在想这一辈子一定不能辜负她母女俩、就算自己吃馒头也不能苦了她们母女俩、首先我要感谢我老婆、在精神上这么支持我、这么了解我、我感觉我很幸运我有这样一位女人、记得我来黄金时代应聘的时候、还在门口走了几个来回才鼓起勇气打电话进来的、记得应聘时朱总最后跟我说了句话说、我们这里刚开始试用期底薪只有一千块钱、你考虑一下、考虑好了来上班、回家路上心里特别开心高兴、感觉已经打开了走向成功大门了、在我来到黄金时代一段时间后发现我们公司是这么牛、感觉自己很幸运来到了这么好的一个平台、在公司里给我感染最多就是朱总跟王总、他俩是我的榜样、我自己暗暗在想我什么时候做到跟他们一样🐂、那时我就给了自己一个3年的计划目标、2017年已经过去了、在2017的一年里、自己真的不够努力、本来可以做的更好、学的更多的知识的、自己的惰性跟不坚持离自己定下的目标很远、自己对不起自己家人的支持、对不起公司给予了这么好一个平台没去发挥没去努力、2017已经过去了在2018里我要有个全新的自己、自己一定要改掉自己不好的习惯、2018一定要我一定要提高自己执行力、主动、坚持、勤快、坚持认真做好每一天工作、时刻把公司事当作自己的事干、一心一意去做好每一件事、我深深的相信在朱总的带领下我们公司将来绝对是全国二手车界的标杆、我一要努力跟随着我们朱总一起完成我们大家的梦想、2018话不多说让行动跟结果来证明自己
 
-    `余前山 2018-01-03`
+    余前山 2018-01-03
 
 ### 回首2017，展望2018：
 
 &emsp;&emsp;2017对我来说也许是人生当中最痛苦，而又残酷的一年。值得庆幸的是我找到了自己，非常感谢赣州所有的小伙伴们， 在我最痛苦的时候感到了温暖。特别是王总，记得他在车里热的全身是汗和我谈心，他谈话我流眼泪了。他的付出和包容，委屈，有目共睹。欧阳丹是个非常有智慧的人，她的一些生活习惯和日常影响了我。我曾发誓我也要向她一样向她学习。朱升江，是个有抱负有梦想的人，非常的单纯。钟定荣其实是个非常渴望成功的，一直非常努力。老余是个非常勤快的人，属于埋头苦干型，把公司的每一件事当成是自己的事。感谢黄金时代的每一个人。感谢朱总和邓总对我的包容，一直鼓励我。感谢黄金时代的谢总和所有所有同事对我的帮助和包容，真诚的谢谢你们。2018我会更努力，我相信我会越来越好。
 
-    `2018年1月3日朱凌仪`
+    2018年1月3日朱凌仪
 
 ### 回首2017 展望2018：
 
@@ -75,13 +75,13 @@
 
 &emsp;&emsp;2018年 要更健康 存款要上涨，要快乐，要不断养成好习惯(摈弃不好的习惯)，要过得充实，过得有意义！新的一年，新开始，新希望，新征程，努力在路上，2018年祝愿每个家人的梦想都能实现 祝黄金时代名车的明天更加美好辉煌 在一起 创精彩！加油(^ω^)
 
-    `2018.01.03 朱升江`
+    2018.01.03 朱升江
 
 ### 回首2017，展望2018：
 
 &emsp;&emsp;穿越回到2017年初始，我感觉我是汪洋中的一艘小破船，没有目标，没有航向，每天都是随波逐流，浪把我推到哪里我就在哪里，前途未知，直到遇到朱总把我带上了黄金时代这艘诺亚方舟，从此我有了不一样的人生，有了目标。有了方向，不再随波逐流，在这艘大船上，朱总是船长指引着正确的方向，邓旭邓总是坚强的后盾，保证着“燃料”充足，王总，谢总，邓总是舵手，用强壮的双手把握着方向，保证大船不偏航，每位同事在自己的岗位上各司其职，全心全力，为了共同和自己的目标方向努力着，我有幸进入这个大家庭，并且找到属于自己的位置，和所有家人在前进中共患难，在向前进的路上尽上一份微薄之力。在这一年里，见证了朱总与邓总的大爱与正能量，每次听完朱总讲话，都感觉全身充满了力量，前途充满了希望，见证了充满智慧，快乐，健康，大爱和付出的每一个位家人以及团结的力量，同时对比出我的不足，不够绽放，不够勤快，不够专业，不够学习力，包袱太多，放不下过去。2017年感谢父母弟弟妹妹对我的支持与信任，感谢朱总和邓总夫妇带领着我成长，感谢各位家人陪伴我成长，2018，在朱总的带领下，改变自己的不足之处，和各位家人共同学习，共同努力，共同进步，为公司的大目标和自己的小目标而奋斗。
 
-    `钟定荣 2018-01-03`
+    钟定荣 2018-01-03
 
 ### 回眸17展望18有恒心必成功－恒成：
 
@@ -97,7 +97,7 @@
 
 &emsp;&emsp;只要有恒心，必然要成功!加油。             
 
-    `恒成  于 20180102 郴州`
+    恒成  于 20180102 郴州
 
 ### 回首2017，展望2018
 
@@ -109,7 +109,7 @@
 
 &emsp;&emsp;2018要求自己要不断地学习，改变现状，重新开始，变得更有价值，走向黄金时代。
 
-    `——— 邓诗云 `
+    ——— 邓诗云 
 
 ### 回首2017，展望2018：
 
@@ -119,4 +119,4 @@
 
 &emsp;&emsp;2018我已经为自己定下了目标，希望可以更加努力的去实现自己的梦想，变得优秀一点。也希望所有的家人们都能够不忘初心，朝着自己所向往的不断努力，始终保持一个善良感恩的心，成长比得到更重要。
 
-    `欧阳丹 2018-01-02`
+    欧阳丹 2018-01-02
