:star2::honeybee::mouse:Go

--- a/1.md
+++ b/1.md
@@ -27,7 +27,10 @@
 ### 回首2017展望2018：
 &emsp;&emsp;回首过去的2017年，有苦有乐有欢笑也有泪水，经历了身体的伤痛，也经历了心灵的伤痛，每一次想放弃的时候，我告诉我自己，我一定可以的，酸甜苦辣样样尝，这就是人生百味吧。肩负一个家庭的责任，一个公司的责任，我唯有坚持与坚强。每每想到公司所有的家人，想到父母孩子，再多的委屈也得咽下去，感谢这一切一切的经历，让我一点一点的成长，厉练自己，强大自己内心。感谢黄金时代所有家人的努力和付出，也感谢父母，爱人、孩子们！因为有你们，才使我更懂得责任与担当！2018年，我将会以学习做为重要目标，照顾孩子高考时期的生活，辅导两个小的，让他们成为一个品学兼优的好学生！自己同时把健康和美丽重视起来，做一个内外兼修的女子！2018我们一起加油
 
-&emsp;&emsp;2018写给自己的一封信：
+    —— 邓旭
+
+### 2018写给自己的一封信：
+
 &emsp;&emsp;2017转眼即过……但无论我想到了是什么方面，首先必须从内心深深的感谢我的家人父亲 哥哥 姐姐们的照顾、包容。感恩朱鹏程 邓开元 邓旭 带我进入黄金时代这个平台。谢谢他们提供了这么优秀的平台让我学习成长 .感恩一路相随的黄金时代所有家人兄弟姐妹们给予我的支持、成长、力挺、包容和信任；说一声你们辛苦了 感谢所有信任我的客户与帮助我的朋友 同行。
 &emsp;&emsp;2017年初个人制定的目标 、在一年的努力中完成了百分之八十. 同样很多没有实现、需要更加努力。 在各位领导的感染下使自己接触到了学习的重要性、人生的意义 。每次给自己制定的小目标完成后都有成就感 .成长比赚钱重要。
 &emsp;&emsp;在2017年所有客户与朋友同行之中很多人教我很多知识 、使我在成长 与发现自己的不足，需要去提升与学习的地方。
@@ -37,11 +40,6 @@
 &emsp;&emsp;2018祝愿所有的人 ：身体健康 开心 幸福 感恩身边所有人
       
     ——王祥力 18年1月2日
-
-### 回首2017展望2018：
-&emsp;&emsp;回首过去的2017年，有苦有乐有欢笑也有泪水，经历了身体的伤痛，也经历了心灵的伤痛，每一次想放弃的时候，我告诉我自己，我一定可以的，酸甜苦辣样样尝，这就是人生百味吧。肩负一个家庭的责任，一个公司的责任，我唯有坚持与坚强。每每想到公司所有的家人，想到父母孩子，再多的委屈也得咽下去，感谢这一切一切的经历，让我一点一点的成长，厉练自己，强大自己内心。感谢黄金时代所有家人的努力和付出，也感谢父母，爱人、孩子们！因为有你们，才使我更懂得责任与担当！2018年，我将会以学习做为重要目标，照顾孩子高考时期的生活，辅导两个小的，让他们成为一个品学兼优的好学生！自己同时把健康和美丽重视起来，做一个内外兼修的女子！2018我们一起加油！
-
-    —— 邓旭
 
 ### 回首2017展望2018：
 
