:star2::honeybee::mouse:Go

--- a/1.md
+++ b/1.md
@@ -31,11 +31,11 @@
 
 ### 2018写给自己的一封信：
 
-&emsp;&emsp;2017转眼即过……但无论我想到了是什么方面，首先必须从内心深深的感谢我的家人父亲 哥哥 姐姐们的照顾、包容。感恩朱鹏程 邓开元 邓旭 带我进入黄金时代这个平台。谢谢他们提供了这么优秀的平台让我学习成长 .感恩一路相随的黄金时代所有家人兄弟姐妹们给予我的支持、成长、力挺、包容和信任；说一声你们辛苦了 感谢所有信任我的客户与帮助我的朋友 同行。
-&emsp;&emsp;2017年初个人制定的目标 、在一年的努力中完成了百分之八十. 同样很多没有实现、需要更加努力。 在各位领导的感染下使自己接触到了学习的重要性、人生的意义 。每次给自己制定的小目标完成后都有成就感 .成长比赚钱重要。
-&emsp;&emsp;在2017年所有客户与朋友同行之中很多人教我很多知识 、使我在成长 与发现自己的不足，需要去提升与学习的地方。
-&emsp;&emsp;2017年没有完成的目前与理想 在2018年中一定去落实、自己的缺点就是对自己不够绽放 不够激情与认真 容易退缩、行动力不足。这些在2018都需要去改变.  
-&emsp;&emsp;我一直坚信着想要比别人优秀就一定比别人付出的更多 .想要收获更多就一定要比别人更努力 .没有捷径 不进步就淘汰 。成长中布满 喜悦与心酸。回顾2017感谢自己小伙子你成长了 都在朝着自己向往的生活中进步。加油 
+&emsp;&emsp;2017转眼即过……但无论我想到了是什么方面，首先必须从内心深深的感谢我的家人父亲、哥哥、姐姐们的照顾、包容。感恩朱鹏程、邓开元、邓旭带我进入黄金时代这个平台。谢谢他们提供了这么优秀的平台让我学习成长，感恩一路相随的黄金时代所有家人兄弟姐妹们给予我的支持、成长、力挺、包容和信任；说一声你们辛苦了 感谢所有信任我的客户与帮助我的朋友、同行。
+&emsp;&emsp;2017年初个人制定的目标、在一年的努力中完成了百分之八十。同样很多没有实现、需要更加努力。在各位领导的感染下使自己接触到了学习的重要性、人生的意义。每次给自己制定的小目标完成后都有成就感，成长比赚钱重要。
+&emsp;&emsp;在2017年所有客户与朋友同行之中很多人教我很多知识、使我在成长与发现自己的不足，需要去提升与学习的地方。
+&emsp;&emsp;2017年没有完成的目标与理想，在2018年中一定去落实、自己的缺点就是对自己不够绽放，不够激情，认真容易退缩与行动力不足。这些在2018都需要去改变。
+&emsp;&emsp;我一直坚信着想要比别人优秀就一定比别人付出的更多，想要收获更多就一定要比别人更努力，没有捷径，不进步就淘汰。成长中布满 喜悦与心酸。回顾2017感谢自己小伙子你成长了，都在朝着自己向往的生活中进步。加油 
 &emsp;&emsp;2018年希望自己可以完成自己所有的目标 。在黄金时代名车汇跟所有家人一起成长.赚钱。希望每位家人都可以达到自己理想与目标。
 &emsp;&emsp;2018祝愿所有的人 ：身体健康 开心 幸福 感恩身边所有人
       
