:star2::honeybee::mouse:Go

--- a/1.md
+++ b/1.md
@@ -5,7 +5,8 @@
 &emsp;&emsp;眨眼间2017年已过去，回顾这一年来不断问自己2017年我收获到了什么？学到了什么？悟到了什么？目标达成了多少？成长了多少？付出了多少？
 
 &emsp;&emsp;2017一切的一切……但无论我想到了是什么方面，首先必须从内心深深地感恩我的父母老婆孩子和家人！感恩我生命中的贵人好兄弟湘涛！感恩一路相随的黄金时代所有家人兄弟姐妹们给予我的支持、成长、力挺、包容和信任；感恩所有帮助和认可黄金时代的新老客户！感恩身边的一切！
-回顾2017我的记忆忧新，上半年有幸参加张老师的传统文化课程，让我感悟到……人生的价值在于修心、修缮、修德、钱不是挣回来的是修来的！更让我深深体会到……我是一切的根源！感恩张老师……
+
+&emsp;&emsp;回顾2017我的记忆忧新，上半年有幸参加张老师的传统文化课程，让我感悟到……人生的价值在于修心、修缮、修德、钱不是挣回来的是修来的！更让我深深体会到……我是一切的根源！感恩张老师……
 
 &emsp;&emsp;下半年完成了自己提前一年的目标，即黄金时代名车广场开业。想想2017是很棒的一年，在工作上也收获很多，进步了很多，悟到了很多，不管是哪方面，学习着之前没接触的事情，在管理方面非常感恩王总、陈总、邓总、谢总和老婆的付出和支持！在收购工作方面也感恩陈总刘总范总两位邓总给予的鼎力对接和默默付出，在运输收购方面感恩朱总廖总无私的付出和负责任的帮助，在财务方面感恩两位美女的细心、用心和无微不至的服务，在网络平台和销售部的精英牌证方面得到了黄金时代家人们的努力付出和创新发展！这一切都是我这一年无形中最大最大的收获。再次感恩黄金时代的家人们……
 
