--- a/1.md
+++ b/1.md
@@ -125,3 +125,8 @@
 &emsp;&emsp;2018我已经为自己定下了目标，希望可以更加努力的去实现自己的梦想，变得优秀一点。也希望所有的家人们都能够不忘初心，朝着自己所向往的不断努力，始终保持一个善良感恩的心，成长比得到更重要。
 
     欧阳丹 2018-01-02
+    
+    
+<audio controls="" loop="false" preload="none">
+    <source src="http://www.ytmp3.cn/down/57268.mp3" type="audio/mp3">
+</audio>
