--- a/1.md
+++ b/1.md
@@ -1,6 +1,6 @@
 
-<audio controls="" loop="false" preload="none">
-    <source src="http://www.ytmp3.cn/down/57268.mp3" type="audio/mp3">
+<audio src="http://www.ytmp3.cn/down/57268.mp3" controls="controls">
+Your browser does not support the audio element.
 </audio>
 
 # 2108携手前行，不忘初心
